syntax = "proto3";
package blockved.glitterchain.index;

option go_package = "github.com/glitternetwork/chain-dep/glitter_proto/blockved/glitterchain/index/types";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "common/staking.proto";

enum ServiceStatus {
  option (gogoproto.goproto_enum_prefix) = false;
  Service_Status_Unset   = 0 [(gogoproto.enumvalue_customname) = "unset"];
  Service_Status_Start = 1 [(gogoproto.enumvalue_customname) = "start"];
  Service_Status_Stop   = 2 [(gogoproto.enumvalue_customname) = "stop"];
  Service_Status_Delete   = 3 [(gogoproto.enumvalue_customname) = "delete"];
}

message Table{
  string table_name = 1;
  string meta  = 2;
  google.protobuf.Timestamp update_time = 3
  [(gogoproto.nullable) = false, (gogoproto.stdtime) = true, (gogoproto.moretags) = "yaml:\"update_time\""];
}

//consumer pledge dataset token
message CPDT {
  string        address = 1
  [(gogoproto.nullable) = true];
  string        amount = 2
  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}
message Dataset {
  string        dataset_name = 1;
  ServiceStatus work_status =  2;
  string        owner_address = 3;
  string        opdt_amount = 4 //owner pledge dataset token
  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string        hosts = 5;
  string        manage_addresses = 6;
  repeated      Table tables = 7;
  string        cpdt_amount = 8 //consumer pledge dataset token
  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string        description = 9;
  google.protobuf.Timestamp update_time = 10
  [(gogoproto.nullable) = false, (gogoproto.stdtime) = true, (gogoproto.moretags) = "yaml:\"update_time\""];
}