syntax = "proto3";
package blockved.glitterchain.index;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/glitternetwork/chain-dep/glitter_proto/blockved/glitterchain/index/types";
import "gogoproto/gogo.proto";
import "common/sql_engine.proto";
import "blockved/glitterchain/index/dataset.proto";

service Msg {
    rpc SQLExec(SQLExecRequest) returns (SQLExecResponse);

    rpc SQLGrant(SQLGrantRequest) returns (SQLGrantResponse);

    rpc BindHost(BindHostRequest ) returns (BindHostResponse);

    rpc CreateDataset(CreateDatasetRequest ) returns (CreateDatasetResponse);

    rpc EditDataset(EditDatasetRequest ) returns (EditDatasetResponse);

    rpc EditTable(EditTableRequest ) returns (EditTableResponse);
}

message SQLExecRequest{
  string uid = 1;
  string sql = 2;
  repeated common.Argument arguments = 3;
}

message SQLExecResponse{
    repeated common.ResultSet results = 1;
    float took_times = 2;
}

message SQLGrantRequest{
  string uid = 1;
  string onTable = 2;
  string toUID = 3;
  string role = 4;
  string onDatabase = 5;
}

message SQLGrantResponse{
}


message BindHostRequest{
  string uid  = 1;
  string database = 2;
  string url = 3;
}

message BindHostResponse {

}

message EditTableRequest{
  string from_address = 1;
  string dataset_name = 2;
  string table_name = 3;
  string meta  = 4;
}

message EditTableResponse{}


message CreateDatasetRequest{
  string  from_address = 1;
  string  dataset_name = 2;
  ServiceStatus work_status =  3;
  string        owner_address = 4;
  string        owner_stake = 5
  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string        hosts = 6;
  string        manage_addresses = 7;
  string        description = 8;
}

message CreateDatasetResponse{}


message EditDatasetRequest{
  string  from_address = 1;
  string  dataset_name = 2;
  ServiceStatus work_status =  3;
  string        owner_address = 4;
  string        owner_stake = 5
  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string        hosts = 6;
  string        manage_addresses = 7;
  string        description = 8;
}


message EditDatasetResponse{}